# autonomous-retail-shrinkage-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: azure-deploy.md
scripts/: download_retail_relevant_data.py  prepare_retail_from_coco128.py  prepare_retail_yolo_dataset.py  setup_gpu.ps1  train_local_detector.py
src/agent/: copilot.py  main.py
src/agent/static/: index.html
src/incidents/: manager.py  models.py  repository.py
src/vision/: behaviors.py  detection_service.py  pipeline.py  reasoning.py  schemas.py  zones.py
tests/: test_behavior_engine.py  test_production_readiness.py  test_reasoning.py  test_smoke.py  test_zone_engine.py
